Adds dashboard layout to survies

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -19,4 +19,9 @@
         android:layout_gravity="start">
     </android.support.design.widget.NavigationView>
 
+    <include
+        layout="@layout/activity_dashboard"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"/>
+
 </android.support.v4.widget.DrawerLayout>
