--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,14 @@
     <color name="colorAccent">#FF4081</color>
     <color name="black">#000000</color>
     <color name="blanco">#f1f1f1</color>
+    <color name="backgroundcolor">#fcfcfc</color>
+    <color name="lightgray">#ededed</color>
+    <color name="deeppurple">#7c4dff</color>
+    <color name="materialyellow">#ffb300</color>
+    <color name="materialgreen">#00bfa5</color>
+    <color name="pinkaccent">#ff4081</color>
+    <color name="materialred">#F44336</color>
+    <color name="materialblue">#2196F3</color>
+    <color name="materialorange">#4CAF50</color>
+    
 </resources>
