--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Dashboard"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:gravity="center">
 
     <TextView
         android:layout_width="match_parent"
@@ -38,7 +39,10 @@
                 <android.support.v7.widget.CardView
                     android:layout_width="128dp"
                     android:layout_height="172dp"
-                    android:layout_margin="8dp">
+                    android:layout_margin="8dp"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:id="@+id/social_card">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -77,7 +81,10 @@
                 <android.support.v7.widget.CardView
                     android:layout_width="128dp"
                     android:layout_height="172dp"
-                    android:layout_margin="8dp">
+                    android:layout_margin="8dp"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:id="@+id/espiritual_card">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -124,7 +131,10 @@
                 <android.support.v7.widget.CardView
                     android:layout_width="128dp"
                     android:layout_height="172dp"
-                    android:layout_margin="8dp">
+                    android:layout_margin="8dp"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:id="@+id/ocupacional_card">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -163,7 +173,10 @@
                 <android.support.v7.widget.CardView
                     android:layout_width="128dp"
                     android:layout_height="172dp"
-                    android:layout_margin="8dp">
+                    android:layout_margin="8dp"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:id="@+id/fisico_card">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -210,7 +223,10 @@
                 <android.support.v7.widget.CardView
                     android:layout_width="128dp"
                     android:layout_height="172dp"
-                    android:layout_margin="8dp">
+                    android:layout_margin="8dp"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:id="@+id/intelectual_card">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -249,7 +265,10 @@
                 <android.support.v7.widget.CardView
                     android:layout_width="128dp"
                     android:layout_height="172dp"
-                    android:layout_margin="8dp">
+                    android:layout_margin="8dp"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:id="@+id/emocional_card">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -296,7 +315,10 @@
                 <android.support.v7.widget.CardView
                     android:layout_width="272dp"
                     android:layout_height="150dp"
-                    android:layout_margin="8dp">
+                    android:layout_margin="8dp"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:id="@+id/financiero_card">
 
                     <LinearLayout
                         android:layout_width="match_parent"
