--- a/app/src/main/res/layout/poll_fragment.xml
+++ b/app/src/main/res/layout/poll_fragment.xml
@@ -1,30 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center_horizontal">
-
-    <TextView
-        android:id="@+id/tvCount"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:text="1 de 10"
-        android:textColor="@android:color/black"
-        android:textSize="12dp" />
-
-    <TextView
-        android:id="@+id/tvQuestion"
-        android:layout_width="300dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="30dp"
-        android:gravity="center_horizontal"
-        android:text="Soy capaz de lidiar adecuadamente con el estrés y la tensión y hacer tiempo para actividades de ocio. "
-        android:textColor="@android:color/black"
-        android:textSize="25dp" />
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -32,35 +11,60 @@
         android:orientation="vertical"
         android:gravity="center_horizontal">
 
-        <Button
-            android:id="@+id/Btn_1"
+        <TextView
+            android:id="@+id/tvCount"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_width="200dp"
-            android:background="@android:color/holo_blue_dark"
-            android:textColor="@android:color/white"
-            android:textSize="15dp"
-            android:layout_marginTop="50dp"
-            android:text="Casi siempre" />
+            android:gravity="center_horizontal"
+            android:text="1 de 10"
+            android:textColor="@android:color/black"
+            android:textSize="12dp" />
 
-        <Button
-            android:id="@+id/Btn_2"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:background="@android:color/holo_orange_light"
-            android:text="A veces"
-            android:textColor="@android:color/white"
-            android:textSize="15dp" />
+        <TextView
+            android:id="@+id/tvQuestion"
+            android:layout_width="300dp"
+            android:layout_height="200dp"
+            android:layout_marginTop="30dp"
+            android:gravity="center_horizontal"
+            android:textColor="@android:color/black"
+            android:textSize="25dp" />
 
-        <Button
-            android:id="@+id/Btn_3"
-            android:layout_height="wrap_content"
-            android:layout_width="200dp"
-            android:background="@android:color/holo_red_dark"
-            android:textColor="@android:color/white"
-            android:textSize="15dp"
-            android:layout_marginTop="20dp"
-            android:text="Muy raramente" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center_horizontal">
+
+            <Button
+                android:id="@+id/Btn_1"
+                android:layout_height="wrap_content"
+                android:layout_width="200dp"
+                android:background="@android:color/holo_blue_dark"
+                android:textColor="@android:color/white"
+                android:textSize="15dp"
+                android:layout_marginTop="50dp"
+                android:text="Casi siempre" />
+
+            <Button
+                android:id="@+id/Btn_2"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:background="@android:color/holo_orange_light"
+                android:text="A veces"
+                android:textColor="@android:color/white"
+                android:textSize="15dp" />
+
+            <Button
+                android:id="@+id/Btn_3"
+                android:layout_height="wrap_content"
+                android:layout_width="200dp"
+                android:background="@android:color/holo_red_dark"
+                android:textColor="@android:color/white"
+                android:textSize="15dp"
+                android:layout_marginTop="20dp"
+                android:text="Muy raramente" />
+        </LinearLayout>
     </LinearLayout>
 
-</LinearLayout>
+</FrameLayout>
