--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -39,6 +39,7 @@
 
                 <android.support.v7.widget.CardView
                     android:layout_width="128dp"
+                    android:id="@+id/cardView_social"
                     android:layout_height="172dp"
                     android:layout_margin="8dp"
                     android:foreground="?android:attr/selectableItemBackground"
@@ -138,11 +139,12 @@
                 android:orientation="horizontal">
 
                 <android.support.v7.widget.CardView
+                    android:id="@+id/cardView_ocupacional"
                     android:layout_width="128dp"
                     android:layout_height="172dp"
                     android:layout_margin="8dp"
-                    android:foreground="?android:attr/selectableItemBackground"
-                    android:clickable="true">
+                    android:clickable="true"
+                    android:foreground="?android:attr/selectableItemBackground">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -183,11 +185,12 @@
                 </android.support.v7.widget.CardView>
 
                 <android.support.v7.widget.CardView
+                    android:id="@+id/cardView_fisico"
                     android:layout_width="128dp"
                     android:layout_height="172dp"
                     android:layout_margin="8dp"
-                    android:foreground="?android:attr/selectableItemBackground"
-                    android:clickable="true">
+                    android:clickable="true"
+                    android:foreground="?android:attr/selectableItemBackground">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -237,11 +240,12 @@
                 android:orientation="horizontal">
 
                 <android.support.v7.widget.CardView
+                    android:id="@+id/cardView_intelectual"
                     android:layout_width="128dp"
                     android:layout_height="172dp"
                     android:layout_margin="8dp"
-                    android:foreground="?android:attr/selectableItemBackground"
-                    android:clickable="true">
+                    android:clickable="true"
+                    android:foreground="?android:attr/selectableItemBackground">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -337,11 +341,12 @@
                 android:orientation="horizontal">
 
                 <android.support.v7.widget.CardView
+                    android:id="@+id/cardView_Financiero"
                     android:layout_width="272dp"
                     android:layout_height="150dp"
                     android:layout_margin="8dp"
-                    android:foreground="?android:attr/selectableItemBackground"
-                    android:clickable="true">
+                    android:clickable="true"
+                    android:foreground="?android:attr/selectableItemBackground">
 
                     <LinearLayout
                         android:layout_width="match_parent"
