--- a/app/src/main/res/layout/poll_fragment.xml
+++ b/app/src/main/res/layout/poll_fragment.xml
@@ -11,6 +11,15 @@
         android:orientation="vertical"
         android:gravity="center_horizontal">
 
+        <ProgressBar
+            android:id="@+id/progress"
+            style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:animationResolution="@android:integer/config_shortAnimTime"
+            android:max="10"
+            android:progress="0" />
+
         <TextView
             android:id="@+id/tvCount"
             android:layout_width="300dp"
@@ -23,7 +32,7 @@
         <TextView
             android:id="@+id/tvQuestion"
             android:layout_width="300dp"
-            android:layout_height="200dp"
+            android:layout_height="180dp"
             android:layout_marginTop="30dp"
             android:gravity="center_horizontal"
             android:textColor="@android:color/black"
@@ -31,7 +40,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center_horizontal">
 
@@ -42,7 +51,7 @@
                 android:background="@android:color/holo_blue_dark"
                 android:textColor="@android:color/white"
                 android:textSize="15dp"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="30dp"
                 android:text="Casi siempre" />
 
             <Button
@@ -65,6 +74,13 @@
                 android:layout_marginTop="20dp"
                 android:text="Muy raramente" />
         </LinearLayout>
+
+        <Button
+            android:id="@+id/Btn_anterior"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:enabled="false"
+            android:text="Pregunta anterior" />
     </LinearLayout>
 
 </FrameLayout>
