--- a/app/src/main/res/layout/poll_fragment.xml
+++ b/app/src/main/res/layout/poll_fragment.xml
@@ -34,7 +34,7 @@
             android:layout_width="300dp"
             android:layout_height="180dp"
             android:layout_marginTop="30dp"
-            android:gravity="center_horizontal"
+            android:gravity="center"
             android:textColor="@android:color/black"
             android:textSize="25dp" />
 
