--- a/app/src/main/res/layout/activity_usuario.xml
+++ b/app/src/main/res/layout/activity_usuario.xml
@@ -8,14 +8,13 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <View
-            android:id="@+id/view"
             android:layout_width="match_parent"
             android:layout_height="27dp"
-            android:background="@color/colorPrimary" />
+            android:background="@color/blanco" />
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/usuario_imagen_registro"
@@ -24,33 +23,74 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_gravity="center"
+            android:background="@color/blanco"
             android:scaleType="centerCrop"
             android:src="@drawable/profile"
             app:civ_border_color="@color/colorPrimaryDark"
-            app:civ_border_width="4dp"
-            android:background="@color/colorPrimary"/>
+            app:civ_border_width="4dp" />
 
         <View
-            android:id="@+id/view2"
             android:layout_width="match_parent"
             android:layout_height="27dp"
-            android:background="@color/colorPrimary" />
+            android:background="@color/blanco" />
+
+        <TextView
+            android:id="@+id/textView_etiquetaNombre"
+            android:layout_width="325dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="6dp"
+            android:text="Nombre"
+            android:textAlignment="textStart"
+            android:textColor="@color/gray"
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/textView_perfilNombre"
-            android:layout_width="match_parent"
+            android:layout_width="325dp"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
+            android:layout_gravity="center"
+            android:textAlignment="textStart"
             android:textColor="@color/black"
-            android:textSize="12pt" />
+            android:textSize="18sp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="6dp"
+            android:background="@color/lightgray" />
+
+        <TextView
+            android:id="@+id/textView_etiquetaMail"
+            android:layout_width="325dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="6dp"
+            android:text="Correo electrónico"
+            android:textAlignment="textStart"
+            android:textColor="@color/gray"
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/textView_perfilMail"
-            android:layout_width="match_parent"
+            android:layout_width="325dp"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
+            android:layout_gravity="center"
+            android:textAlignment="textStart"
             android:textColor="@color/black"
-            android:textSize="12pt" />
+            android:textSize="18sp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="6dp"
+            android:background="@color/lightgray" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/blanco" />
+
     </LinearLayout>
 
 </RelativeLayout>
