--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,5 +16,6 @@
     <color name="materialred">#F44336</color>
     <color name="materialblue">#2196F3</color>
     <color name="materialorange">#4CAF50</color>
+    <color name="gray">#bcbcbc</color>
     
 </resources>
