Agregar lista de encuestas pasadas, bloquear dimensiones ya contestadas, mostrar pantalla de completado cuando se termina la encuesta, guardar la encuesta en el historial y empezar una nueva

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -20,9 +20,16 @@
         app:menu="@menu/drawermenu">
     </android.support.design.widget.NavigationView>
 
-    <include
-        layout="@layout/activity_dashboard"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"/>
+    <FrameLayout
+        android:id="@+id/menu_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <include
+            layout="@layout/activity_dashboard"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"/>
+    </FrameLayout>
+
 
 </android.support.v4.widget.DrawerLayout>
