Agregar icono para resultados en el menu y hacer que el fondo de la lista de fechas no sea clickable

--- a/app/src/main/res/layout/fecha_row.xml
+++ b/app/src/main/res/layout/fecha_row.xml
@@ -4,6 +4,8 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:padding="6dp"
+    android:clickable="false"
+    android:focusable="false"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
