--- a/app/src/main/res/layout/grafica_fragment.xml
+++ b/app/src/main/res/layout/grafica_fragment.xml
@@ -9,11 +9,10 @@
     <LinearLayout
         android:id="@+id/layout1"
         android:layout_width="0dp"
-
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/list"
+        app:layout_constraintBottom_toTopOf="@+id/divider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -21,20 +20,26 @@
         <com.github.mikephil.charting.charts.RadarChart
             android:id="@+id/chart"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"></com.github.mikephil.charting.charts.RadarChart>
+            android:layout_height="match_parent"/>
+
     </LinearLayout>
+
+    <View
+        android:id="@+id/divider"
+        app:layout_constraintTop_toBottomOf="@id/layout1"
+        app:layout_constraintBottom_toBottomOf="@id/list"
+        android:layout_width="match_parent"
+        android:layout_height="2dip"
+        android:background="#4CAF50" />
 
     <ListView
         android:id="@+id/list"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/layout1" />
+        app:layout_constraintTop_toBottomOf="@+id/divider" />
 
 
 </android.support.constraint.ConstraintLayout>
