se creo actividad de forgot password

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -98,6 +98,16 @@
             android:textColor="@color/colorAccent"
             android:textSize="16dp" />
 
+        <TextView
+            android:id="@+id/textView_forgotPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="24dp"
+            android:gravity="center"
+            android:text="@string/login_forgotPassword"
+            android:textColor="@color/colorAccent"
+            android:textSize="16dp" />
+
     </LinearLayout>
 
 </LinearLayout>
