--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -5,6 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:paddingBottom="16dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:paddingTop="16dp"
     tools:context=".ForgotPasswordActivity">
 
     <TextView
@@ -16,19 +20,41 @@
         android:textColor="@color/black"
         android:textSize="18sp" />
 
-    <EditText
-        android:id="@+id/editText"
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:text="Name"
-        android:paddingTop="10dp"/>
+        android:layout_marginTop="13dp"
+        android:hint="@string/login_mail"
+        android:textColorHint="@color/colorPrimary">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/editText_forgotPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="2dp"
+            android:layout_marginTop="2dp"
+            android:backgroundTint="@color/colorPrimaryDark"
+            android:inputType="textEmailAddress"
+            android:textColor="@android:color/black" />
+    </android.support.design.widget.TextInputLayout>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/button_sendMail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:backgroundTint="@color/colorPrimaryDark"
         android:paddingTop="10dp"
         android:text="Enviar correo" />
+
+    <TextView
+        android:id="@+id/textView_forgotPassword2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
+        android:gravity="center"
+        android:paddingTop="10dp"
+        android:text="@string/forgotpassword_regresar"
+        android:textColor="@color/colorAccent"
+        android:textSize="16dp" />
 </LinearLayout>
