--- a/app/src/main/res/layout/activity_usuario.xml
+++ b/app/src/main/res/layout/activity_usuario.xml
@@ -34,31 +34,40 @@
             android:layout_height="27dp"
             android:background="@color/blanco" />
 
-        <TextView
-            android:id="@+id/textView_etiquetaNombre"
-            android:layout_width="325dp"
+        <LinearLayout
+            android:id="@+id/editarNombre"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="6dp"
-            android:text="Nombre"
-            android:textAlignment="textStart"
-            android:textColor="@color/gray"
-            android:textSize="18sp" />
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textView_perfilNombre"
-            android:layout_width="325dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textAlignment="textStart"
-            android:textColor="@color/black"
-            android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/textView_etiquetaNombre"
+                android:layout_width="325dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="6dp"
+                android:text="Nombre"
+                android:textAlignment="textStart"
+                android:textColor="@color/gray"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/textView_perfilNombre"
+                android:layout_width="325dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textAlignment="textStart"
+                android:textColor="@color/black"
+                android:textSize="18sp" />
+        </LinearLayout>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="6dp"
             android:background="@color/lightgray" />
+
 
         <TextView
             android:id="@+id/textView_etiquetaMail"
