--- a/app/src/main/res/layout/poll_fragment.xml
+++ b/app/src/main/res/layout/poll_fragment.xml
@@ -40,25 +40,25 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center_horizontal">
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
 
             <Button
                 android:id="@+id/Btn_1"
-                android:layout_height="wrap_content"
                 android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
                 android:background="@android:color/holo_blue_dark"
+                android:text="Casi siempre"
                 android:textColor="@android:color/white"
-                android:textSize="15dp"
-                android:layout_marginTop="30dp"
-                android:text="Casi siempre" />
+                android:textSize="15dp" />
 
             <Button
                 android:id="@+id/Btn_2"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="15dp"
                 android:background="@android:color/holo_orange_light"
                 android:text="A veces"
                 android:textColor="@android:color/white"
@@ -66,21 +66,23 @@
 
             <Button
                 android:id="@+id/Btn_3"
-                android:layout_height="wrap_content"
                 android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
                 android:background="@android:color/holo_red_dark"
+                android:text="Muy raramente"
                 android:textColor="@android:color/white"
-                android:textSize="15dp"
-                android:layout_marginTop="20dp"
-                android:text="Muy raramente" />
+                android:textSize="15dp" />
+
+            <Button
+                android:id="@+id/Btn_anterior"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:enabled="false"
+                android:text="Pregunta anterior" />
         </LinearLayout>
 
-        <Button
-            android:id="@+id/Btn_anterior"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:enabled="false"
-            android:text="Pregunta anterior" />
     </LinearLayout>
 
 </FrameLayout>
