--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:gravity="center"
-        android:text="Dimensiones/Encuestas"
+        android:text="Dimensiones"
         android:textStyle="bold"
         android:textSize="20dp"/>
 
