--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -28,5 +28,13 @@
         android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+    
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20dp"
+        android:gravity="center_horizontal"
+        android:id="@android:id/empty"
+        android:text="\n\n\n\n\No haz contestado\nninguna encuesta"/>
 
 </LinearLayout>
